; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/mm/extr_pgtable.c_pte_alloc_one.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/mm/extr_pgtable.c_pte_alloc_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }
%struct.mm_struct = type { i32 }

@__userpte_alloc_gfp = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.page* @pte_alloc_one(%struct.mm_struct* %0, i64 %1) #0 {
  %3 = alloca %struct.mm_struct*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.page*, align 8
  store %struct.mm_struct* %0, %struct.mm_struct** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i32, i32* @__userpte_alloc_gfp, align 4
  %7 = call %struct.page* @alloc_pages(i32 %6, i32 0)
  store %struct.page* %7, %struct.page** %5, align 8
  %8 = load %struct.page*, %struct.page** %5, align 8
  %9 = icmp ne %struct.page* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load %struct.page*, %struct.page** %5, align 8
  %12 = call i32 @pgtable_page_ctor(%struct.page* %11)
  br label %13

13:                                               ; preds = %10, %2
  %14 = load %struct.page*, %struct.page** %5, align 8
  ret %struct.page* %14
}

declare dso_local %struct.page* @alloc_pages(i32, i32) #1

declare dso_local i32 @pgtable_page_ctor(%struct.page*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
